build: execute e2e tests in build pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,14 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+defaults:
+  run:
+    shell: pwsh
+
 jobs:
   audit:
     name: Audit
     runs-on: windows-2022
-    if: false
     timeout-minutes: 60
     env:
       sonar_available: ${{ secrets.SONAR_TOKEN  != '' && 'true' || 'false' }}
@@ -38,6 +41,7 @@ jobs:
         run: |
           go mod download
           make audit
+        shell: powershell
 
       - name: "[release] Snyk test"
         if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
@@ -71,6 +75,7 @@ jobs:
 
   build:
     name: Build & Release
+    needs: audit
     runs-on: windows-2022
     timeout-minutes: 60
     steps:
@@ -86,8 +91,8 @@ jobs:
 
       - name: Build extension artifact
         run: |
-          go install github.com/goreleaser/goreleaser/v2@latest
           make artifact
+        shell: powershell
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
