--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,16 @@ jobs:
           make installer
         shell: powershell
 
+      - name: Installing the extension 
+        run: |
+            $ErrorActionPreference = "Stop"
+            Start-Process "msiexec.exe" -ArgumentList "/a SteadybitWindowsHostExtension.msi /quiet /qn /log install.log" -Wait -NoNewWindow
+            if ($LastExitCode -ne 0) {
+              throw "MSI installation failed with exit code $LastExitCode"
+            }
+        working-directory: ./dist
+        shell: powershell
+
       - name: Upload Artifacts
         id: artifact-upload
         uses: actions/upload-artifact@v4
