fix: might speed up the Windows pipeline - forgot to return all of the tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,12 @@ defaults:
   run:
     shell: pwsh
 
+env:
+  GOCACHE: D:\gocache
+  GOMODCACHE: D:\gomodcache
+  GOTMPDIR: D:\gotmp
+
+
 jobs:
   audit:
     name: Audit
