feat: exclude e2e directory from test coverage calculation

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=steadybit_extension-host-windows
 sonar.organization=steadybit
 
 sonar.sources=.
-sonar.exclusions=**/*_test.go
+sonar.exclusions=**/*_test.go,**/e2e/**
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
