--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,13 @@ defaults:
   run:
     shell: pwsh
 
+env:
+  # Fix slow Go compile and cache restore
+  # See https://github.com/actions/setup-go/pull/515
+  GOCACHE: D:\gocache
+  GOMODCACHE: D:\gomodcache
+  GOTMPDIR: D:\gotmp
+
 jobs:
   audit:
     name: Audit
@@ -32,6 +39,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      # Go requires gotmp to be present
+      - run: mkdir D:\gotmp
+        shell: pwsh
 
       - uses: actions/setup-go@v5
         with:
@@ -82,6 +93,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      # Go requires gotmp to be present
+      - run: mkdir D:\gotmp
+        shell: pwsh
 
       - name: Set up Go
         uses: actions/setup-go@v5
