--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,8 @@ jobs:
         run: |
           make installer
         shell: powershell
+        env:
+          SKIP_LICENSES_REPORT: false
 
       - name: Upload Artifacts
         id: artifact-upload
