--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,7 +158,7 @@ jobs:
 
   refresh-prod:
     name: Refresh Prod Demo
-    if: github.ref == 'refs/heads/main'
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     needs: [build, refresh-demo]
     runs-on: ubuntu-latest
     timeout-minutes: 15
