fix: artifact name for PRs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,7 +118,7 @@ jobs:
         id: artifact-upload
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.ref_name }}
+          name: ${{ github.head_ref || github.ref_name }}
           path: |
             dist/*.msi
           retention-days: 7
