--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,22 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+  snyk-scan:
+    name: Run Snyk Scan
+    needs: audit
+    runs-on: ubuntu-latest
+    env:
+      snyk_available: ${{ secrets.SNYK_TOKEN  != '' && 'true' || 'false' }}
+    steps:
+      - name: "[release] Snyk test"
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        uses: snyk/actions/golang@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --org=${{ vars.SNYK_ORG_ID }} --severity-threshold=high --project-name=${{ github.repository }} --target-reference=${{ github.ref_name }}
+          command: test
+
   build:
     name: Build & Release
     needs: audit
