--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,6 @@ env:
   GOCACHE: D:\gocache
   GOMODCACHE: D:\gomodcache
   GOTMPDIR: D:\gotmp
-  snyk_available: ${{ secrets.SNYK_TOKEN  != '' && 'true' || 'false' }}
 
 jobs:
   audit:
@@ -75,7 +74,7 @@ jobs:
   snyk-scan:
     name: Run Snyk Scan
     needs: audit
-    if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') && secrets.SNYK_TOKEN != '' }}
     runs-on: ubuntu-latest
     steps:
       - name: "[release] Snyk test"
