--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,8 @@ jobs:
       - name: Build extension installer
         run: make installer
         shell: powershell
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Upload Artifacts
         id: artifact-upload
