--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
           go mod download
           make audit
         shell: powershell
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: SonarCloud Scan
         if: ${{ env.sonar_available == 'true' }}
