feat: action tests (#79)
* feat: action tests
- grouped and standardized usage of types required for new attacks
- disk now keeps track of the file that was created instead of having a hard coded value
- memory attack size validation
- disk letter detection fixed
- disk blocksize validation
- tests for all new preparation steps

* fix: go vet

* feat: github token in windivert download

* fix: missing mode & file path generated in prepare step

* fix: PAT_TOKEN instead of GITHUB_TOKEN

* fix: moved executable checks from prepare to start

* fix: pat token in audit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
           go mod download
           make audit
         shell: powershell
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: SonarCloud Scan
         if: ${{ env.sonar_available == 'true' }}
@@ -119,6 +121,8 @@ jobs:
       - name: Build extension installer
         run: make installer
         shell: powershell
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Upload Artifacts
         id: artifact-upload
