--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,6 @@ defaults:
   run:
     shell: pwsh
 
-env:
-  # Fix slow Go compile and cache restore
-  # See https://github.com/actions/setup-go/pull/515
-  GOCACHE: D:\gocache
-  GOMODCACHE: D:\gomodcache
-  GOTMPDIR: D:\gotmp
 
 jobs:
   audit:
@@ -33,6 +27,11 @@ jobs:
     timeout-minutes: 60
     env:
       sonar_available: ${{ secrets.SONAR_TOKEN  != '' && 'true' || 'false' }}
+      # Fix slow Go compile and cache restore
+      # See https://github.com/actions/setup-go/pull/515
+      GOCACHE: D:\gocache
+      GOMODCACHE: D:\gomodcache
+      GOTMPDIR: D:\gotmp
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -80,8 +79,16 @@ jobs:
     env:
       snyk_available: ${{ secrets.SNYK_TOKEN  != '' && 'true' || 'false' }}
     steps:
+      - name: Checkout repository
+        # if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        if: ${{ env.snyk_available == 'true' }}
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: "[release] Snyk test"
-        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        # if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        if: ${{ env.snyk_available == 'true' }}
         uses: snyk/actions/golang@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -97,6 +104,12 @@ jobs:
       artifact-name: ${{ steps.sanitize.outputs.SANITIZED_ARTIFACT_NAME }}
       artifact-id: ${{ steps.artifact-upload.outputs.artifact-id }}
     timeout-minutes: 60
+    env:
+      # Fix slow Go compile and cache restore
+      # See https://github.com/actions/setup-go/pull/515
+      GOCACHE: D:\gocache
+      GOMODCACHE: D:\gomodcache
+      GOTMPDIR: D:\gotmp
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
