--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,13 @@ jobs:
         with:
           fetch-depth: 0
 
+      - run: mkdir D:\gotmp
+        shell: pwsh
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+
       - name: Download Snyk CLI
         if: ${{ env.snyk_available == 'true' }}
         shell: pwsh
