--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,20 +85,22 @@ jobs:
       GOTMPDIR: D:\gotmp
     steps:
       - name: Checkout repository
-        if: ${{ env.snyk_available == 'true' }}
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - run: mkdir D:\gotmp
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         shell: pwsh
 
       - uses: actions/setup-go@v5
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         with:
           go-version: "1.24"
 
       - name: Download Snyk CLI
-        if: ${{ env.snyk_available == 'true' }}
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         shell: pwsh
         run: |
           $ProgressPreference = 'SilentlyContinue'
@@ -107,7 +109,7 @@ jobs:
           Invoke-WebRequest -Uri $snykUrl -OutFile "snyk-win.exe"
 
       - name: "[release] Snyk test"
-        if: ${{ env.snyk_available == 'true' }}
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         shell: pwsh
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
