--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,6 @@ defaults:
   run:
     shell: pwsh
 
-env:
-  # Fix slow Go compile and cache restore
-  # See https://github.com/actions/setup-go/pull/515
-  GOCACHE: D:\gocache
-  GOMODCACHE: D:\gomodcache
-  GOTMPDIR: D:\gotmp
 
 jobs:
   audit:
@@ -33,6 +27,11 @@ jobs:
     timeout-minutes: 60
     env:
       sonar_available: ${{ secrets.SONAR_TOKEN  != '' && 'true' || 'false' }}
+      # Fix slow Go compile and cache restore
+      # See https://github.com/actions/setup-go/pull/515
+      GOCACHE: D:\gocache
+      GOMODCACHE: D:\gomodcache
+      GOTMPDIR: D:\gotmp
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -76,18 +75,46 @@ jobs:
   snyk-scan:
     name: Run Snyk Scan
     needs: audit
-    runs-on: ubuntu-latest
+    runs-on: windows-2022 
     env:
       snyk_available: ${{ secrets.SNYK_TOKEN  != '' && 'true' || 'false' }}
+      # Fix slow Go compile and cache restore
+      # See https://github.com/actions/setup-go/pull/515
+      GOCACHE: D:\gocache
+      GOMODCACHE: D:\gomodcache
+      GOTMPDIR: D:\gotmp
     steps:
+      - name: Checkout repository
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - run: mkdir D:\gotmp
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        shell: pwsh
+
+      - uses: actions/setup-go@v5
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        with:
+          go-version: "1.24"
+
+      - name: Download Snyk CLI
+        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
+        shell: pwsh
+        run: |
+          $ProgressPreference = 'SilentlyContinue'
+          $latestRelease = Invoke-RestMethod -Uri "https://api.github.com/repos/snyk/cli/releases/latest"
+          $snykUrl = ($latestRelease.assets | Where-Object { $_.name -eq "snyk-win.exe" }).browser_download_url
+          Invoke-WebRequest -Uri $snykUrl -OutFile "snyk-win.exe"
+
       - name: "[release] Snyk test"
         if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
-        uses: snyk/actions/golang@master
+        shell: pwsh
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --org=${{ vars.SNYK_ORG_ID }} --severity-threshold=high --project-name=${{ github.repository }} --target-reference=${{ github.ref_name }}
-          command: test
+        run: |
+          .\snyk-win.exe test --org=${{ vars.SNYK_ORG_ID }} --severity-threshold=high --project-name=${{ github.repository }} --target-reference=${{ github.ref_name }}
 
   build:
     name: Build & Release
@@ -97,6 +124,12 @@ jobs:
       artifact-name: ${{ steps.sanitize.outputs.SANITIZED_ARTIFACT_NAME }}
       artifact-id: ${{ steps.artifact-upload.outputs.artifact-id }}
     timeout-minutes: 60
+    env:
+      # Fix slow Go compile and cache restore
+      # See https://github.com/actions/setup-go/pull/515
+      GOCACHE: D:\gocache
+      GOMODCACHE: D:\gomodcache
+      GOTMPDIR: D:\gotmp
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
