--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,22 +85,18 @@ jobs:
       GOTMPDIR: D:\gotmp
     steps:
       - name: Checkout repository
-        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - run: mkdir D:\gotmp
-        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         shell: pwsh
 
       - uses: actions/setup-go@v5
-        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         with:
           go-version: "1.24"
 
       - name: Download Snyk CLI
-        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         shell: pwsh
         run: |
           $ProgressPreference = 'SilentlyContinue'
@@ -109,12 +105,11 @@ jobs:
           Invoke-WebRequest -Uri $snykUrl -OutFile "snyk-win.exe"
 
       - name: "[release] Snyk test"
-        if: ${{ startsWith(github.ref, 'refs/tags/') && env.snyk_available == 'true' }}
         shell: pwsh
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
-          .\snyk-win.exe test --org=${{ vars.SNYK_ORG_ID }} --severity-threshold=high --project-name=${{ github.repository }} --target-reference=${{ github.ref_name }}
+          .\snyk-win.exe test -d --org=${{ vars.SNYK_ORG_ID }} --severity-threshold=high --project-name=${{ github.repository }} --target-reference=${{ github.ref_name }}
 
   build:
     name: Build & Release
