build: align snyk usage with other extensions

--- a/.github/actions/snyk-windows/action.yml
+++ b/.github/actions/snyk-windows/action.yml
@@ -1,5 +1,5 @@
-name: 'snyk-windows'
-description: 'setups snyk on windows'
+name: "snyk-windows"
+description: "setup snyk on windows"
 inputs:
   command:
     description: "Which Snyk command to run, defaults to test"
@@ -9,9 +9,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Download Snyk CLI
-      shell: pwsh
+    - shell: pwsh
       run: gh release download -R snyk/cli  --pattern snyk-win.exe
-
     - shell: pwsh
       run: .\snyk-win.exe ${{ inputs.command }} ${{ inputs.args }}
