--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: "[Release] Snyk test"
-        uses: .\.github\actions\snyk-windows
+        uses: ./.github/actions/snyk-windows
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -116,7 +116,7 @@ jobs:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: "[Release] Snyk monitor release candidate"
-        uses: .\.github\actions\snyk-windows
+        uses: ./.github/actions/snyk-windows
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
