--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: "[Release] Snyk test"
-        uses: ./.github/actions/snyk-windows/
+        uses: ./.github/actions/snyk-windows
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -116,7 +116,7 @@ jobs:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: "[Release] Snyk monitor release candidate"
-        uses: ./.github/actions/snyk-windows/
+        uses: ./.github/actions/snyk-windows
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -202,10 +202,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: steadybit/extension-kit/.github/workflows/reusable-snyk-scan.yml@main
+      - uses: ./.github/actions/snyk-windows
         with:
           command: monitor
-          container_image: --severity-threshold=high --project-name=${{ github.repository }} --target-reference=latest
+          args: --severity-threshold=high --project-name=${{ github.repository }} --target-reference=latest
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
