build: align snyk usage with other extensions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,6 +201,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - run: mkdir ${{ env.GOTMPDIR }}
       - uses: ./.github/actions/snyk-windows
         with:
           command: monitor
