--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: Trigger Deploy Windows EC2
         id: deploy-windows-ec2
-        uses: the-actions-org/workflow-dispatch@v4
+        uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
         with:
           workflow: Windows-e2e-deploy
           ref: main
@@ -87,7 +87,7 @@ jobs:
           cat port-forward.log
 
       - name: Trigger Delete Windows EC2
-        uses: the-actions-org/workflow-dispatch@v4
+        uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
         with:
           workflow: Windows-e2e-delete
           ref: main
