--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -219,21 +219,23 @@ jobs:
             }
           token: ${{ secrets.PAT_TOKEN }}
 
-  refresh-prod:
-    name: Refresh Prod Demo
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    needs: [build, refresh-demo]
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - name: Trigger Update Prod EC2 Windows Demo
-        uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
-        with:
-          workflow: Windows-prod-demo-deploy
-          ref: main
-          repo: steadybit/infrastructure-live
-          inputs: >-
-            {
-              "extension_run_id": "${{ github.run_id }}"
-            }
-          token: ${{ secrets.PAT_TOKEN }}
+## Not enough activity on windows to demo, currently decommissioned
+
+#  refresh-prod:
+#    name: Refresh Prod Demo
+#    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+#    needs: [build, refresh-demo]
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 15
+#    steps:
+#      - name: Trigger Update Prod EC2 Windows Demo
+#        uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
+#        with:
+#          workflow: Windows-prod-demo-deploy
+#          ref: main
+#          repo: steadybit/infrastructure-live
+#          inputs: >-
+#            {
+#              "extension_run_id": "${{ github.run_id }}"
+#            }
+#          token: ${{ secrets.PAT_TOKEN }}
