--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,7 +150,7 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v5
+        uses: aws-actions/configure-aws-credentials@v5 # NOSONAR githubactions:S7637 - verified action creator
         with:
           aws-region: 'eu-central-1'
           role-to-assume: 'arn:aws:iam::292929100161:role/allow-auto-deploy-from-other-accounts'
